--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ einops = ">=0.6.0,<1.0.0"
 bitsandbytes = ">=0.40.0.post4,<1.0.0"
 requests = "^2.31.0"
 torch = "2.0.0"
+peft = ">=0.4.0,<1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pdoc = "^14.0.0"
